--- a/Alien_Christmas-12s/settings/project.json
+++ b/Alien_Christmas-12s/settings/project.json
@@ -28,40 +28,9 @@
     ]
   ],
   "excluded-modules": [
-    "Dynamic Atlas",
-    "DragonBones",
-    "EditBox",
-    "Graphics",
-    "Geom Utils",
-    "Layout",
-    "Label Effect",
     "Mask",
-    "Mesh",
-    "MotionStreak",
-    "NodePool",
-    "Native Socket",
-    "Physics",
-    "PageView",
-    "PageViewIndicator",
-    "ParticleSystem",
-    "RichText",
-    "Renderer Texture",
-    "Slider",
-    "ScrollBar",
     "ScrollView",
-    "Spine Skeleton",
-    "StudioComponent",
-    "Toggle",
-    "TiledMap",
-    "VideoPlayer",
-    "Widget",
-    "WebView",
-    "3D",
-    "3D Primitive",
-    "3D Physics/cannon.js",
-    "3D Physics/Builtin",
-    "3D Particle",
-    "SafeArea"
+    "3D Physics/Builtin"
   ],
   "preview-port": 7456,
   "design-resolution-width": 960,
